--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-url": "^10.1.3"
   },
   "dependencies": {
+    "@11tyrocks/eleventy-plugin-sass-lightningcss": "^1.3.0",
     "@fontsource/abril-fatface": "^4.5.9",
     "@fontsource/pt-sans": "^4.5.11",
     "@img/sharp-linux-x64": "^0.33.4",
