Add figure wrapping for image titles

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@fontsource/abril-fatface": "^4.5.9",
     "@fontsource/pt-sans": "^4.5.11",
     "@img/sharp-linux-x64": "^0.33.4",
+    "markdown-it-image-figures": "^2.1.1",
     "npm": "^10.8.2",
     "pnpm": "^9.6.0"
   }
